# codeforces

./: CMakeLists.txt  educational_round100_a.cpp  educational_round100_b.cpp  educational_round100_c.cpp  educational_round101_a.cpp  educational_round101_b.cpp  educational_round101_c.cpp  goodbye2020_a.cpp  goodbye2020_b.cpp  goodbye2020_c.cpp  round687_div1a2c.cpp  round687_div2a.cpp  round687_div2b.cpp  round690_div3a.cpp  round690_div3b.cpp  round690_div3c.cpp  round690_div3d.cpp  round690_div3e.cpp  round690_div3e1.cpp  round690_div3e2.cpp  round690_div3f.cpp  round691_div2a.cpp  round691_div2b.cpp  round691_div2c.cpp  round692_div2a.cpp  round692_div2b.cpp  round692_div2c.cpp  template.cpp
