cmake_minimum_required(VERSION 3.17)
project(codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(template template.cpp)
add_executable(round687_div2a round687_div2a.cpp)
add_executable(round687_div2b round687_div2b.cpp)
add_executable(round690_div3a round690_div3a.cpp)
add_executable(round690_div3b round690_div3b.cpp)
add_executable(round690_div3c round690_div3c.cpp)
add_executable(round690_div3d round690_div3d.cpp)